Data Filter Task 2 completed

--- a/src/product/templates/products/list.html
+++ b/src/product/templates/products/list.html
@@ -18,7 +18,21 @@
             <div class="col-md-2">
                 <select name="variant" id="" class="form-control">
                     <option selected disabled>--Select A Variant--</option>
-
+                    <optgroup label="Size">
+                        {% for variant_type in variant_size %}
+                        <option value="{{ variant_type }}">{{ variant_type }}</option>
+                        {% endfor %}
+                    </optgroup>
+                    <optgroup label="Color">
+                        {% for variant_type in variant_color %}
+                        <option value="{{ variant_type }}">{{ variant_type }}</option>
+                        {% endfor %}
+                    </optgroup>
+                    <optgroup label="Style">
+                        {% for variant_type in variant_style %}
+                        <option value="{{ variant_type }}">{{ variant_type }}</option>
+                        {% endfor %}
+                    </optgroup>
                 </select>
             </div>
 
